# decibel-trading-starter-kit-rs

./: .env.example  Cargo.toml  README.md
src/: lib.rs  logging.rs  utils.rs
src/utils/: client.rs  config.rs  faucet.rs  formatting.rs
